--- a/Anubadak/Anubadak.vcxproj
+++ b/Anubadak/Anubadak.vcxproj
@@ -123,17 +123,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ast.cpp" />
-    <ClCompile Include="lexer.cpp" />
+    <ClCompile Include="parser\ast.cpp" />
+    <ClCompile Include="lexer\lexer.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="parser.cpp" />
-    <ClCompile Include="token.cpp" />
+    <ClCompile Include="lexer\token.cpp" />
+    <ClCompile Include="parser\parser.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ast.h" />
-    <ClInclude Include="lexer.h" />
-    <ClInclude Include="parser.h" />
-    <ClInclude Include="token.h" />
+    <ClInclude Include="parser\ast.h" />
+    <ClInclude Include="lexer\lexer.h" />
+    <ClInclude Include="parser\parser.h" />
+    <ClInclude Include="lexer\token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
