--- a/Anubadak/Anubadak.vcxproj.filters
+++ b/Anubadak/Anubadak.vcxproj.filters
@@ -18,30 +18,45 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="parser\ast.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="lexer\lexer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="lexer\token.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="parser\ast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="parser\parser.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="visitor\senamticAnalysis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="visitor\xmlVisitor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="parser\ast.h">
+    <ClInclude Include="lexer\lexer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="lexer\lexer.h">
+    <ClInclude Include="lexer\token.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="parser\ast.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="parser\parser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="lexer\token.h">
+    <ClInclude Include="visitor\visitor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="visitor\senamticAnalysis.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="visitor\xmlVisitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
