--- a/check/check.vcxproj
+++ b/check/check.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="check.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="myprogram.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
